--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/react": "^9.3.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.5",
-    "react-test-renderer": "^16.10.2"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +23,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/react": "^9.3.0",
     "jest-dom": "^3.1.2",
+    "react-test-renderer": "^16.10.2",
     "react-testing-library": "^6.1.2"
   }
 }
